--- a/Sistema Aduanero/Sistema Aduanero/Views/Shared/_Layout.cshtml
+++ b/Sistema Aduanero/Sistema Aduanero/Views/Shared/_Layout.cshtml
@@ -6,8 +6,12 @@
     <title>@ViewData["Title"] - Sistema_Aduanero</title>
 
     <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
         <link rel="stylesheet" href="~/css/site.css" />
+        <link rel="stylesheet" href="~/css/footer_layout.css">
+        <link rel="stylesheet" href="~/css/Logo_y_Buscador.css">
+        <link rel="stylesheet" href="~/css/noticias_Index.css">
+        <link rel="stylesheet" href="~/css/login_style.css">
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -17,7 +21,45 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <!--Menú-->
+    <header class="container logo_y_seBusca">
+        <div class="row">
+            <!-- Este div contiene el logo de la empresa y el nombre de la misma. -->
+            <div class="col-md-3 contenedor_logo_empresa">
+                <img src="../IMG/Logo.png" class="rounded logo" alt="dasd hola" width="250">
+                
+            </div>
+
+            <div class="col-md-2 contenedor_logo_empresa">
+                <h3 class="nombreEmpresa"> GATEWAY TO THE WORLD </h3>
+            </div>
+
+            <!-- En este div esta el escudo nacional de la nación y el buscador. -->
+            <div class="col-md-4 col-md-offset-3 contenedor_del_escudo_y_buscador">
+
+                <img src="../IMG/Escudo_Nacional.PNG" class="rounded escudoNacional" alt="imagen del escudo nacional">
+                <p class="nombreDeLaNacion">República Dominicana</p>
+
+                <form action="" method="get" class="formulario_Para_Buscar">
+                    <div class="input-group">
+                        <input type="text" name="noticias" class="form-control" placeholder="Buscar...">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="submit">
+                                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                            </button>
+                        </span>
+                    </div><!-- /input-group -->
+                    <!--</div> /.col-lg-6 -->
+                </form>
+
+                <span class="miniMenu">
+                    <a href="#">INICIO</a> | <a href="#">MAPA DEL SITIO</a> | <a href="#">CONTACTO</a>
+                </span>
+            </div>
+        </div>
+    </header>
+    <!-- La clase "menú" la utilizo para darle un margin-botton de 0px-->
+    <nav class="navbar navbar-inverse menu">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -26,28 +68,93 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Sistema_Aduanero</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">GATEWAY TO THE WORLD</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Inicio</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Sobre_Nosotros">Sobre Nosotros</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Servicios">Servicios</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Noticias">Noticias</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Login">Login</a></li>
+                    <li class="perfil"><a asp-area="" asp-controller="Default" asp-action="Index">Login</a></li>
+
+
                 </ul>
+                <a class="btn btn-default menu_Desktop" href="#"><label>Perfil</label></a>
             </div>
         </div>
     </nav>
 
+
     <partial name="_CookieConsentPartial" />
 
-    <div class="container body-content">
+    <div class="container body-content carousel_imagenes">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2020 - Sistema_Aduanero</p>
-        </footer>
     </div>
 
+    <div class="container-fluid">
+        <hr />
+        <!-- Enlaces para redireccionar a los portales de otras instituciones. -->
+        <div class="row">
+            <div class="col-md-4 col-md-offset-5">
+                <h3 class="text-">Enlaces de interes</h3>
+            </div>
+        </div>
+        <div class="row enlaces_de_otras_instituciones">
+            <!-- Los enlaces que redireccionan a las otras instituciones. -->
+            <div class="col-md-2 col-md-offset-1">
+                <a href="https://republicadigital.gob.do/" target="_blank">
+                    <img class="imagen_enlaces" src="../IMG/MASICON.PNG">
+                </a>
+            </div>
+            <div class="col-md-2 col-md-offset-1">
+                <a href="https://presidencia.gob.do/" target="_blank">
+                    <img class="imagen_enlaces" src="../IMG/MASICON2.PNG">
+                </a>
+            </div>
+            <div class="col-md-2 col-md-offset-1">
+                <a href="http://311.gob.do/" target="_blank">
+                    <img class="imagen_enlaces" src="../IMG/MASICON3.PNG">
+                </a>
+            </div>
+            <div class="col-md-2 col-md-offset-1">
+                <a href="https://911.gob.do/" target="_blank">
+                    <img class="imagen_enlaces" src="../IMG/MASICON4.PNG">
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <footer class="contenedor_footer">
+        <div class="row">
+            <!--aquí el escudo nacional y logo de la empresa-->
+            <div class="col-sm-12 col-md-offset-6 escudo_nacional_y_logo_en_footer">
+                <img src="../IMG/Escudo_Nacional.PNG" alt="imagen" class="escudo_nacional_footer">
+                <img src="../IMG/Logo.png" alt="imagen" class="logo_empresa_footer" width="250">
+            </div>
+
+        </div>
+
+        <div class="row">
+            <!-- Terminos de uso, Politicas de Privacidad y Contacto -->
+            <div class="col-sm-12 col-md-offset-5 contenedor_padre_para_TPP">
+                <span class="TPP">
+                    <a href="#">Término de uso</a> | <a href="#">Políticas de Privacidad</a> | <a href="#">Preguntas Frecuentes</a>
+                </span>
+            </div>
+        </div>
+
+        <div class="row">
+            <!--aquí las certificaciones NORTIC-->
+            <div class="col-sm-12 col-md-offset-6 col-lg-6">
+                <img src="../IMG/A2.PNG" class="A2_footer">
+            </div>
+            <div class="col-sm-12 col-md-offset-6">
+                <p>&copy; 2020 - Sistema_Aduanero</p>
+            </div>
+        </div>
+    </footer>
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
