Se agregaron la conexion a la base de datos y modificacion de la barra de navegacion

--- a/Sistema Aduanero/Sistema Aduanero/Views/Shared/_Layout.cshtml
+++ b/Sistema Aduanero/Sistema Aduanero/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                 </form>
 
                 <span class="miniMenu">
-                    <a href="#">INICIO</a> | <a href="#">MAPA DEL SITIO</a> | <a href="#">CONTACTO</a>
+                    <a href="../Home/Index">INICIO</a> | <a href="#">MAPA DEL SITIO</a> | <a href="../Home/Contact">CONTACTO</a>
                 </span>
             </div>
         </div>
@@ -73,8 +73,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Inicio</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Sobre_Nosotros">Sobre Nosotros</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Servicios">Servicios</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="About">Sobre Nosotros</a></li>
+                    <li><a asp-area="" asp-controller="Servicios" asp-action="Index">Servicios</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Noticias">Noticias</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Login">Login</a></li>
                     <li class="perfil"><a asp-area="" asp-controller="Default" asp-action="Index">Login</a></li>
