--- a/Sistema Aduanero/Sistema Aduanero/wwwroot/css/site.css
+++ b/Sistema Aduanero/Sistema Aduanero/wwwroot/css/site.css
@@ -1,13 +1,12 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
 for details on configuring this project to bundle and minify static web assets. */
 body {
-    padding-top: 50px;
-    padding-bottom: 20px;
 }
 
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
+    margin-top: 0px;
     padding-left: 15px;
     padding-right: 15px;
 }
@@ -23,11 +22,6 @@ body {
     width: 100%;
 }
 
-/* QR code generator */
-#qrCode {
-    margin: 15px;
-}
-
 /* Hide/rearrange for smaller screens */
 @media screen and (max-width: 767px) {
     /* Hide captions */
@@ -36,6 +30,26 @@ body {
     }
 }
 
-.navbar-collapse collapse .menu_Desktop{
-    position:center;
+.logo{
+    height: 90px;
+    width: 135px;
 }
+.menu{
+    margin-top: 25px;
+    margin-bottom: 0px;
+}
+
+/* En menú */
+.navbar{
+    background: #7142c3;
+}
+.navbar > .container *{
+    color: #fff;
+}
+.navbar-inverse .navbar-nav > li > a {
+    color: #fff;
+}
+.navbar-inverse .navbar-nav > li > a:hover {
+    color: #000;
+}
+/* En menú */
