--- a/Sistema Aduanero/Sistema Aduanero/Views/Home/Login.cshtml
+++ b/Sistema Aduanero/Sistema Aduanero/Views/Home/Login.cshtml
@@ -25,7 +25,8 @@
         </div>
         <div class="row formulario_login">
             <div class="col-md-12">
-                <button type="submit" class="btn btn-success btn-block btn_iniciar_sesion">Enviar</button>
+                <button type="submit" class="btn btn-success btn-block btn_iniciar_sesion">
+                    Enviar <span class="glyphicon glyphicon-send"></span></button>
             </div>
             <div class="col-md-4 col-md-offset-4">
                 <a href="#" class="text-danger">Olvide mi contraseña</a>
