Se agrego un icono al botón nuevo registro.

--- a/Sistema Aduanero/Sistema Aduanero/Views/Home/Login.cshtml
+++ b/Sistema Aduanero/Sistema Aduanero/Views/Home/Login.cshtml
@@ -8,7 +8,9 @@
     </div>
     <div class="col-md-6 mostrar_formulario_registro">
         <!-- Este boton tendra una función simple con JS para mostrar ese formulario. -->
-        <button type="button" class="btn btn-info btn_mostrar_formulario_registro">Nuevo registro</button>
+        <button type="button" class="btn btn-info btn_mostrar_formulario_registro">
+            Nuevo registro <span class="glyphicon glyphicon-plus"></span>
+        </button>
     </div>
 </div>
 <div class="row">
@@ -88,7 +90,7 @@
         <div class="row">
             <div class="col-md-12 btn_guardar_nuevo_registro">
                 <button type="submit" class="btn btn-success btn-block btn_nuevo_registro">
-                    <span class="glyphicon glyphicon-floppy-disk"></span> Guardar datos
+                    Guardar datos <span class="glyphicon glyphicon-floppy-disk"></span>
                 </button>
             </div>
         </div>
