--- a/Sistema Aduanero/Sistema Aduanero/Views/Shared/_Layout.cshtml
+++ b/Sistema Aduanero/Sistema Aduanero/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="~/css/noticias_Index.css">
         <link rel="stylesheet" href="~/css/servicios_style.css">
         <link rel="stylesheet" href="~/css/login_style.css">
+        <link rel="stylesheet" href="~/css/boton_ir_arriba.css">
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -118,6 +119,12 @@
         </div>
     </div>
 
+    <!-- Este es el botón de ir hacia arriba -->
+    <i class="ir_arriba">
+        <span class="glyphicon glyphicon-chevron-up"></span>
+    </i>
+    <!-- Este es el botón de ir hacia arriba -->
+
     <footer class="container-fluid contenedor_footer">
         <div class="row">
              <!--aquí el escudo nacional y logo de la empresa-->
@@ -150,6 +157,7 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="~/js/boton_ir_arriba.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
