--- a/Sistema Aduanero/Sistema Aduanero/Views/Shared/_Layout_Cliente.cshtml
+++ b/Sistema Aduanero/Sistema Aduanero/Views/Shared/_Layout_Cliente.cshtml
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="~/css/Logo_y_Buscador.css" />
         <link rel="stylesheet" href="~/css/perfil_cliente_style.css" />
         <link rel="stylesheet" href="~/css/formulario_de_importacion_y_exportacion.css" />
+        <link rel="stylesheet" href="~/css/boton_ir_arriba.css">
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -115,6 +116,13 @@
         </div>
     </div>
 
+    
+    <!-- Este es el botón de ir hacia arriba -->
+    <i class="ir_arriba">
+        <span class="glyphicon glyphicon-chevron-up"></span>
+    </i>
+    <!-- Este es el botón de ir hacia arriba -->
+
     <footer class="container-fluid contenedor_footer">
         <div class="row">
              <!--aquí el escudo nacional y logo de la empresa-->
@@ -147,6 +155,7 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="~/js/boton_ir_arriba.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
