Se le agrego al botón "Nuevo Registro" las acciones de ocultar y mostrar el formulario.

--- a/Sistema Aduanero/Sistema Aduanero/wwwroot/css/login_style.css
+++ b/Sistema Aduanero/Sistema Aduanero/wwwroot/css/login_style.css
@@ -26,3 +26,9 @@
     margin-left: 0px;
     padding: 20px;
 }
+
+#formulario_nuevo_registro{
+    display: none;
+    /*  visibility: hidden; La diferencia esta en que display elimina el espacio del elemento que 
+        oculta, en cambio visibility lo oculta pero deja el espacio.*/
+}
