--- a/Sistema Aduanero/Sistema Aduanero/Views/Home/Login.cshtml
+++ b/Sistema Aduanero/Sistema Aduanero/Views/Home/Login.cshtml
@@ -8,7 +8,7 @@
     </div>
     <div class="col-md-6 mostrar_formulario_registro">
         <!-- Este boton tendra una función simple con JS para mostrar ese formulario. -->
-        <button type="button" class="btn btn-info btn_mostrar_formulario_registro">
+        <button type="button" class="btn btn-info btn_mostrar_formulario_registro" id="btn_mostrar_y_ocultar" onclick="mostrar_y_ocultar()">
             Nuevo registro <span class="glyphicon glyphicon-plus"></span>
         </button>
     </div>
@@ -36,7 +36,7 @@
         </div>
     </form>
 
-    <form action="" method="" class="col-md-6">
+    <form action="" method="" class="col-md-6" id="formulario_nuevo_registro">
         <div class="row">
             <div class="col-md-6">
                 <label for="apellidos">Apellido(s):</label>
