Se agrego la vista factura, el css para darle estilo a la misma y el IActionResult Factura para gestionar las acciones de la misma.

--- a/Sistema Aduanero/Sistema Aduanero/Views/Shared/_Layout_Cliente.cshtml
+++ b/Sistema Aduanero/Sistema Aduanero/Views/Shared/_Layout_Cliente.cshtml
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="~/css/perfil_cliente_style.css" />
         <link rel="stylesheet" href="~/css/formulario_de_importacion_y_exportacion.css" />
         <link rel="stylesheet" href="~/css/boton_ir_arriba.css">
+        <link rel="stylesheet" href="~/css/facturar_style.css">
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -71,6 +72,7 @@
                 <ul class="nav navbar-nav menu_Desktop">
                     <li><a asp-area="" asp-controller="Cliente" asp-action="Perfil">Perfil</a></li>
                     <li><a asp-area="" asp-controller="Cliente" asp-action="Listado_De_Servicios_Contratados">Consultar</a></li>
+                    <li><a asp-area="" asp-controller="Cliente" asp-action="Facturar">Facturar</a></li>
                     <li><a asp-area="" asp-controller="Cliente" asp-action="Solicitar_Servicio_De_Importacion_O_Exportacion">Nueva Solicitud</a></li>
                 </ul>
             </div>
