El placeholder del No. Factura sufrio una modificación ya que tenia letras y se le agregaron unos ceros para que el usuario sepa van numeros.

--- a/Sistema Aduanero/Sistema Aduanero/Views/Cliente/Facturar.cshtml
+++ b/Sistema Aduanero/Sistema Aduanero/Views/Cliente/Facturar.cshtml
@@ -26,7 +26,7 @@
 
         <div class="col-md-12">
             <label for="no_solicitud">No. Solicitud:</label>
-            <input type="text" name="no_solicitud" id="" class="form-control" placeholder="De una descripción de su mercancia">
+            <input type="text" name="no_solicitud" id="" class="form-control" placeholder="0000">
         </div>
 
         <div class="col-md-12">
