--- a/Sistema Aduanero/Sistema Aduanero/Views/Home/Login.cshtml
+++ b/Sistema Aduanero/Sistema Aduanero/Views/Home/Login.cshtml
@@ -9,7 +9,7 @@
     <div class="col-md-6 mostrar_formulario_registro">
         <!-- Este boton tendra una función simple con JS para mostrar ese formulario. -->
         <button type="button" class="btn btn-info btn_mostrar_formulario_registro" id="btn_mostrar_y_ocultar" onclick="mostrar_y_ocultar()">
-            Nuevo registro <span class="glyphicon glyphicon-plus"></span>
+            Registrarse <span class="glyphicon glyphicon-plus"></span>
         </button>
     </div>
 </div>
