--- a/Sistema Aduanero/Sistema Aduanero/Views/Empleado/Perfil.cshtml
+++ b/Sistema Aduanero/Sistema Aduanero/Views/Empleado/Perfil.cshtml
@@ -1,5 +1,8 @@
 @{
     Layout = "_Layout_Empleados";
+    var datos_del_usuario = ViewBag.Perfil;
+    string datos_telefono = (ViewBag.Telefono_Usuario.Telefono != null) ? ViewBag.Telefono_Usuario.Telefono : "Agrega tu telefono.";
+    string datos_correo = (ViewBag.Correo_Usuario.Correo != null) ? ViewBag.Correo_Usuario.Correo : "Agrega tu correo.";
 }
 
 <div class=""></div>
@@ -7,19 +10,25 @@
     <div class="col-md-5">
         <ul class="list-group">
             <li class="list-group-item">
-                <h1>Ana Maria Perez</h1>
+                <h1>@datos_del_usuario.Nombres @datos_del_usuario.Apellidos</h1>
             </li>
             <li class="list-group-item">
-                <b>Nombre:</b> Ana Maria
+                <b>Nombre(s):</b> @datos_del_usuario.Nombres
             </li>
             <li class="list-group-item">
-                <b>Apellido:</b> Perez
+                <b>Apellido(s):</b> @datos_del_usuario.Apellidos
             </li>
             <li class="list-group-item">
-                <b>Código empleada(o):</b> 2014758461
+                <b>Código cliente:</b> @datos_del_usuario.Id
             </li>
             <li class="list-group-item">
-                <a href="#" class="btn btn-danger btn-block">
+                <b>Telefono:</b> @datos_telefono
+            </li>
+            <li class="list-group-item">
+                <b>Correo:</b> @datos_correo
+            </li>
+            <li class="list-group-item">
+                <a asp-action="Cerrar_Sesion" class="btn btn-danger btn-block">
                     Cerrar Sesión <span class="glyphicon glyphicon-off"></span>
                 </a>
             </li>
